# No_Show

./: .example.env  .gitignore  404.html  CHANGELOG.md  DOCKERFILE_API  Dockerfile  LICENSE  README.md  alembic.ini  deploy.sh  dvc.yaml  entrypoint.py  index.html  manifest.json  manifest_admin_dash.json  manifest_api.json  manifest_dash.json  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
.dvc/: config
.github/: pull_request_template.md
.github/workflows/: file_check.yml  linting.yml  publish_docs.yml  push_on_release.yml  unit_test.yml
alembic/: README  env.py
alembic/versions/: 0cd216c41f64_add_actual_clinic_name.py  15a94b3d2592_remove_last_call_date_column_from_.py  20f444146781_add_timestamp.py  6d815bb77dc1_change_index_predictions.py  84310a5c9e71_add_user.py
data/: dataset_card.md
data/processed/: example_prediction_data.json.dvc  fixed_pred_score_bin.json.dvc
data/raw/: NL.txt.dvc  data_export.sql  data_export_pilot.sql  data_prediction.sql  poliafspraken_no_show.csv.dvc  poliafspraken_pilot.csv.dvc
data/sql/: data_export.sql  data_prediction.sql  data_rct_export.sql
dataset_card/: index.html
docs/: conf.py  dataset_card.md  index.md  index.rst  model_card.md
model_card/: index.html
notebooks/: analyse_call_results.ipynb  analyze_rct.ipynb  exploratory_data_analysis.ipynb  model_evaluation.ipynb  model_experiments.ipynb  model_strategy.ipynb  performance_monitoring.ipynb  pilot_compare_noshow.ipynb  pilot_results.ipynb  test_outputnotebook.ipynb  train_model.ipynb
output/dvclive/: dvc.yaml  metrics.json  params.yaml  report.html
output/dvclive/plots/metrics/: best_score.tsv  mean_precision.tsv  mean_recall.tsv  mean_roc_auc.tsv  std_roc_auc.tsv
output/dvclive/plots/sklearn/: calibration.json  precision_recall.json  roc.json
output/models/: no_show_model_cv.pickle.dvc  no_show_model_cv_rct.pickle.dvc
run/: admin_dash.py  app.py  calling_dash.py  train_pipeline.py
run/config/: config.toml  config.toml.dvc  config.toml.example
search/: search_index.json
src/noshow/: __init__.py  config.py  train_pipeline.py
src/noshow/api/: app.py  app_helpers.py  pydantic_models.py
src/noshow/dashboard/: connection.py  helper.py  layout.py
src/noshow/database/: connection.py  export.py  models.py
src/noshow/features/: appointment_features.py  cumulative_features.py  feature_pipeline.py  no_show_features.py  patient_features.py
src/noshow/model/: predict.py  train_model.py
src/noshow/preprocessing/: geo.py  load_data.py  utils.py
src/noshow/visualisation/: features_plots.py
tests/: test_api.py  test_appointment_features.py  test_clinic_filters.py  test_dashboard.py  test_features.py  test_model.py  test_noshow.py  test_rct.py  test_utils.py  test_visualisation.py
tests/data/: test_appointments.json
